Setting '-webkit-filter' to 'brightness(calc(10% * 2))' does not work https://bugs.webkit.org/show_bug.cgi?id=140149

Reviewed by Darin Adler.

Source/WebCore:

Setting '-webkit-filter' to 'brightness(calc(10% * 2))' was not working
because the CSS parser did not handle calculated values inside
brightness(). This patch addresses the issue.

Test: fast/css/webkit-filter-calc.html

* css/CSSParser.cpp:
(WebCore::CSSParser::parseBuiltinFilterArguments):

LayoutTests:

Update the -webkit-filter calculated value test to cover brightness()
function as well.

* fast/css/webkit-filter-calc-expected.txt:
* fast/css/webkit-filter-calc.html:


Canonical link: https://commits.webkit.org/158127@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178010 268f45cc-cd09-0410-ab3c-d52691b4dbfc